--- a/styles.css
+++ b/styles.css
@@ -11,4 +11,6 @@ p{
     -o-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
+    width: "100"
+    height:"200"
 }
