--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,12 @@ p{
 }
 
 .rotate90 {
+    width: 500px;
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -o-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
-    width: "100"
-    height:"200"
+
+
 }
