--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,57 @@
+*{
+  text-decoration: none;
+}
+
+nav{
+  font-family: cursive;
+}
 h2{
-  color: red;
+  color: #588670;
 }
 p{
-  color:orange;
+  color:rgb(133, 23, 4);
+}
+.rotate90 {
+    transform: rotate(180deg);
 }
 
-.rotate90 {
-    width: 500px;
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg);
+}
+header {
+  background-color:#fff;
+  width:100%;
+  height:150px;
+}
 
+header .brand-logo{
+  font-family: Catamaran;
+  font-size: 24px;
+  font-weight: 900;
+  padding: 50 0;
+  color:#360515 ;
+  text-transform: uppercase;
+  display: block;
+  margin:0 auto;
+  text-align: center;
+}
 
+header nav ul{
+  display: block;
+  margin: 0 auto;
+  width: fit-content;
+}
+
+header nav ul li{
+  display: inline-block;
+  float: left;
+  list-style:none;
+  padding: 0 20px;
+}
+
+header nav ul li a{
+  font-family: Catamaran;
+  font-size: 18px;
+  font-weight: 200
+  color:rgb(173, 64, 233) ;
+  list-style: none;
+  list
 }
