--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ p{
 header {
   background-color:#fff;
   width:100%;
-  height:150px;
+  height:100px;
 }
 
 header .brand-logo{
@@ -36,15 +36,15 @@ header .brand-logo{
 
 header nav ul{
   display: block;
-  margin: 0 auto;
-  width: fit-content;
+  margin: 0 10px;
+  width: 100%;
 }
 
 header nav ul li{
   display: inline-block;
   float: left;
   list-style:none;
-  padding: 0 20px;
+  padding: 0 10px;
 }
 
 header nav ul li a{
@@ -54,4 +54,13 @@ header nav ul li a{
   color:rgb(173, 64, 233) ;
   list-style: none;
   list
+}
+
+.banner-index{
+  width = 100%;
+  height: calc(100vh - 200px);
+  background-image: url('Imgs/Koda/IMG_7019.JPG');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
